feat: Configure Vercel deployment for the web application and add Next.js as a dev dependency.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type-check": "turbo type-check"
   },
   "devDependencies": {
+    "next": "^14.1.0",
     "sharp": "^0.34.5",
     "turbo": "^2.0.0",
     "typescript": "^5.3.0"
